plugins {
	id 'application'
	id 'groovy'
	id 'org.graalvm.buildtools.native' version '0.9.9'
	id 'com.palantir.git-version' version '0.13.0'
}

def details = versionDetails(prefix: 'v@')
version "${details.lastTag}.${details.commitDistance}-${details.gitHash}" as String

repositories {
	mavenCentral()
}

def generatedDir = file("$buildDir/generated/src/java")

task generateJava() {
	outputs.dir generatedDir
	doLast {
		def genFile = file("$generatedDir/build/Build.java")
		mkdir genFile.parentFile
		genFile.text = "package build; public interface Build { String VERSION = \"$project.version\"; }"
	}
}

sourceSets.main.java.srcDir generatedDir
compileJava.dependsOn generateJava

compileJava {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

java {
	modularity.inferModulePath = true
}

application {
	mainClass.set('net.pawet.pawgen.Application')
	applicationName 'pawgen'
}

jar {
	manifest {
		attributes = ['Main-Class': application.mainClass.get(), 'Version': project.version]
	}
}

graalvmNative {
	toolchainDetection = true
	testSupport = false
	binaries {
		main {
			// Main options
			debug.set(true) // Determines if debug info should be generated, defaults to false
			verbose.set(true) // Add verbose output, defaults to false
			fallback.set(false) // Sets the fallback mode of native-image, defaults to false

			// Advanced options
			buildArgs '--install-exit-handlers', '--native-image-info'/*, '--static', '--report-unsupported-elements-at-runtime'*/
			// Passes '-H:Extra' to the native image builder options. This can be used to pass parameters which are not directly supported by this extension
			// Runtime options
			runtimeArgs '--help' // Passes '--help' to built image, during "nativeRun" task
			// Development options
			agent.enabled.set(false) // Enables the reflection agent. Can be also set on command line using '-Pagent'
		}
	}
}

configurations {
	fatJar.extendsFrom implementation
}

task fatJar(type: Jar) {
	group 'Build'
	manifest.attributes tasks.jar.manifest.attributes
	archiveBaseName.set("$project.name-full")
	from(
		{ configurations.fatJar.collect({ it.isDirectory() ? it : zipTree(it) }) },
		{ it.excludes = ['*.md', 'module-info.class'] }
	)
	with jar
	duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

test {
	useJUnitPlatform()
}


dependencies {
	compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
	implementation group: 'com.github.spullara.mustache.java', name: 'compiler', version: mustacheVersion
	implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: twelvemonkeysVersion
	implementation group: 'jakarta.json', name: 'jakarta.json-api', version: jakartajsonVersion
	implementation group: 'org.glassfish', name: 'jakarta.json', version: jakartajsonVersion, classifier: 'module'
	implementation group: 'org.slf4j', name: 'slf4j-simple', version: slf4jVersion
	implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: slf4jVersion

	testCompileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
	testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion

	testImplementation enforcedPlatform(group: 'org.spockframework', name: 'spock-bom', version: spockVersion)
	testImplementation group: 'org.spockframework', name: 'spock-core'
	testImplementation group: 'net.bytebuddy', name: 'byte-buddy'
	testImplementation group: 'org.objenesis', name: 'objenesis'
	testImplementation group: 'com.google.jimfs', name: 'jimfs', version: memoryfilesystemVersion
	testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: wiremockVersion
}

